# xhochiproyect

./: .gitignore  README.md  environments.toml
.cursor/rules/: project_coding_standards.mdc  react_frontend_standards.mdc  rust_soroban_dialect.mdc  rust_soroban_security.mdc
contracts/carbon-certifier/: Cargo.toml
contracts/carbon-certifier/src/: contract.rs  lib.rs  test.rs
contracts/carbon-token/: Cargo.toml
contracts/carbon-token/src/: lib.rs  test.rs  token.rs
docs/: ARCHIVOS_CLAVE_FRONTEND.md  COMANDOS_FASE_3.md  CREACION_COMPONENTE_CERTIFICATECARD.md  CREACION_COMPONENTE_CERTIFICATELIST.md  CREACION_COMPONENTE_MINTCERTIFICATE.md  CREACION_COMPONENTE_TOKENBALANCE.md  CREACION_COMPONENTE_TRANSFERTOKENS.md  CREACION_DASHBOARD.md  CREACION_HOOK_USECARBONBALANCE.md  CREACION_HOOK_USECERTIFICATES.md  CREACION_HOOK_USEVERIFIERROLE.md  CREACION_PAGINA_MINT.md  CREACION_PAGINA_TRANSFER.md  DASHBOARD_CONFIGURADO.md  ESTADO_ACTUAL_FINAL.md  ESTADO_ACTUAL_PROYECTO.md  FASE_3_SETUP_FRONTEND.md  INSTALACION_DOCKER_WINDOWS.md  PASO_10_INTEGRACION_NFT_TOKEN.md  PASO_11_APROBACIONES_ERC20.md  PASO_12_QUEMA_CERTIFICADOS.md  PASO_1_CONTRATO_BASE.md  PASO_2_ALMACENAMIENTO_MINTING.md  PASO_3_FUNCIONES_CONSULTA.md  PASO_4_FUNCIONES_INDEXACION.md  PASO_5_VALIDACION_EVENTOS.md  PASO_6_PAGINACION.md  PASO_7_ORDENAMIENTO_FILTRO.md  PASO_8_NFT_TRANSFERENCIA.md  PASO_9_TOKEN_FUNGIBLE_CARBONXO.md  RESUMEN_COMPLETO_FASE_3.md  RESUMEN_SETUP_FRONTEND.md  SIN_WALLET_ALTERNATIVAS.md
src/: App.tsx
src/components/: CertificateCard.tsx  CertificateList.tsx  MintCertificate.tsx  (+2 more)
(+11 files in other folders)
